# Products.EasyNewsletter

./: .copier-answers.yml  .coveragerc  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  CHANGES.rst  CHANGES.txt  EasyNewletter.code-workspace  MANIFEST.in  README.md  README.rst  README.txt  UPGRADE.md  base.cfg  bobtemplate.cfg  bootstrap-4.3.x.sh  bootstrap-5.0.x.sh  bootstrap-5.1.x.sh  bootstrap-base.sh  bootstrap-travis.sh  buildout.cfg  constraints.txt  constraints_plone51.txt  constraints_plone52.txt  constraints_plone60.txt  constraints_plone61.txt  coredev5.cfg  hatch_build.py  import_enl_stats.py  missing.txt  plone-4.3.x.cfg  plone-5.0.x.cfg  plone-5.1.x.cfg  pyproject.toml  qa.cfg  requirements.txt  requirements_plone51.txt  requirements_plone52.txt  requirements_plone60.txt  (+16 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  plone-package.yml  python-package.yml
2.5.10a1/: MANIFEST.in  README.txt
2.5.10a1/Products/EasyNewsletter/: configure.zcml  profiles.zcml
2.5.10a1/Products/EasyNewsletter/browser/: configure.zcml  enl_subscribers_view.pt  issue.py  issue_send_form.pt
2.5.10a1/Products/EasyNewsletter/content/: ENLSubscriber.py
2.5.10a1/Products/EasyNewsletter/i18n/: extra.pot
2.5.10a1/Products/EasyNewsletter/portlets/: configure.zcml  subscriber.py
2.5.10a1/Products/EasyNewsletter/tests/: test_enl.py
2.5.10a1/Products/EasyNewsletter/utils/: ENLHTMLParser.py
2.5.10a1/docs/: make.bat
Products/EasyNewsletter/: TODO.txt  __init__.py  config.py  configure.zcml  doi18ndude  doi18ndude-singlelang  enl_registration_tool.py  handlers.py  indexers.py  indexers.zcml  interfaces.py  issuedatafetcher.py  listsubscribers.py  profiles.zcml  queued_mailhost.py  setuphandlers.py  testing.py  upgrades.py  upgrades.zcml  version.txt  vocabularies.py  vocabularies.zcml  wfsubscribers.py
Products/EasyNewsletter/browser/: actions_menu.py  all_issues_view.pt  configure.zcml  confirm_mail.pt  confirm_subject.pt  confirm_subscription.py  controlpanel.py  daily_issue.py  edithelper.py  enl_subscribers_view.pt  helper_views.py  issue.py  issue_online_view.pt  issue_preview_view.pt  issue_public_view.pt  issue_send_form.pt  newsletter.py  registration.py  subscribers.py  subscription_form.pt  upload_csv.pt  viewlets.py  views.py
Products/EasyNewsletter/browser/javascripts/: enl_edithelper.js  iframeResizer.min.js
Products/EasyNewsletter/browser/static/: easynewsletter.css  easynewsletter.css.map  easynewsletter.less
Products/EasyNewsletter/browser/templates/: NewsletterTemplateWidget.pt  easynewsletter_view.pt  enl_actions_viewlet.pt  enl_drafts_view.pt  enl_subtopics.pt  unsubscribe_form.pt
Products/EasyNewsletter/content/: ENLIssue.py  ENLSubscriber.py  ENLTemplate.py  EasyNewsletter.py  __init__.py  configure.zcml
Products/EasyNewsletter/i18n/: easynewsletter-de.po  easynewsletter-fr.po  easynewsletter-nl.po  easynewsletter-plone-da.po  easynewsletter-plone-de.po  easynewsletter-plone-es.po  easynewsletter-plone-fr.po  easynewsletter-plone-it.po  easynewsletter-plone-nl.po  easynewsletter-plone-pt-br.po  easynewsletter-plone.pot  easynewsletter.pot  generate.sh  generated.pot
Products/EasyNewsletter/locales/: EasyNewsletter.pot  manual.pot  plone-manual.pot  plone.pot  rebuild.sh
Products/EasyNewsletter/portlets/: configure.zcml  subscriber.pt  subscriber.py
Products/EasyNewsletter/profiles/base/: browserlayer.xml  componentregistry.xml  metadata.xml  registry.xml  skins.xml
Products/EasyNewsletter/profiles/common/: metadata.xml  portlets.xml
Products/EasyNewsletter/profiles/default/: catalog.xml  cssregistry.xml  factorytool.xml  jsregistry.xml  metadata.xml  portlets.xml  propertiestool.xml  skins.xml  types.xml  viewlets.xml  workflows.xml
Products/EasyNewsletter/profiles/plone4/: cssregistry.xml  jsregistry.xml  metadata.xml  propertiestool.xml
Products/EasyNewsletter/profiles/plone5/: metadata.xml  registry.xml  types.xml
Products/EasyNewsletter/profiles/uninstall/: componentregistry.xml  cssregistry.xml  jsregistry.xml  metadata.xml  portlets.xml  types.xml  viewlets.xml  workflows.xml
Products/EasyNewsletter/queue/: configure.zcml  interfaces.py
Products/EasyNewsletter/queue/taskqueue/: configure.zcml  handler.py  view.py
Products/EasyNewsletter/queue/zamqp/: handler.py
Products/EasyNewsletter/skins/EasyNewsletter/: NewsletterTemplateWidget.pt  activate_subscriber.py  activate_subscriber.py.metadata  aggregation_news_events_listing.pt  aggregation_news_events_rich.pt  easynewsletter.css  easynewsletter.css.dtml  easynewsletter_view.pt  easynewsletter_view.pt.metadata  enl_drafts_view.pt  enl_isOrderable.py  enl_issue_view.pt  enl_masters_view.pt  enl_subscribers_view.pt  enl_subtopics.pt  enl_template_view.pt  enl_templates_view.pt  output_blacksea.pt  output_blacksee.pt  output_default.pt  output_etem.pt
Products/EasyNewsletter/tests/: base.py  test_daily_issue.py  test_enl.py  test_issuedatafetcher.py  test_newsletter.py  test_registration.py  test_setup.py  test_unsubscribe_form.py  test_utils.py  utils.py
Products/EasyNewsletter/utils/: ENLHTMLParser.py  __init__.py  base.py  configure.zcml  enl.py  mail.py  subscriber.py
Products/EasyNewsletter/zamqp/: configure.zcml  handler.py
docs/: LICENCE.txt  Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  index.html  searchindex.js
docs/source/: conf.py  index.rst  index.txt
docs_old/: index.rst
docs_old/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
src/Products/: __init__.py
src/Products.EasyNewsletter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/Products/EasyNewsletter/: __init__.py  config.py  configure.zcml  doi18ndude-singlelang  enl_registration_tool.py  handlers.py  indexers.py  indexers.zcml  interfaces.py  issuedatafetcher.py  permissions.zcml  profiles.zcml  setuphandlers.py  subscriber.py  testing.py  tiles.py  tiles.zcml  upgrades.py  upgrades.zcml
(+302 files in other folders)
