[project]
name = "Products.EasyNewsletter"
version = "6.0.3.dev0"
description = "Powerful newsletter/mailing addon for Plone"
dynamic = ["readme"]
requires-python = ">=3.10"
license = {text = "GPL-2.0-or-later"}
authors = [
    {name = "Maik Derstappen", email = "md@derico.de"}
]
keywords = ["Plone", "Newsletter", "Mailing", "Email", "Mailinglist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Plone",
    "Framework :: Plone :: 6.1",
    "Framework :: Plone :: Addon",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "beautifulsoup4",
    "email-validator>=1.1.2",
    "emails",
    "chardet",
    "html2text",
    "jinja2",
    "nameparser",
    "plone.api",
    "plone.app.registry",
    "plone.app.upgrade",
    "plone.classicui",
    "plone.protect>=3.1.1",
    "plone.resource",
    "Plone==6.1.4",
    "premailer",
    "Products.CMFPlone",
    "setuptools",
    "six",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-plone>=0.5.0",
    "plone.app.testing",
    "plone.app.robotframework",
    "plone.testing",
    "robotsuite",
    "ruff",
    "invoke",
    "watchdog",
]

[tool.hatch.metadata.hooks.custom]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
update_locale = "Products.EasyNewsletter.locales.update:update_locale"

[project.entry-points."z3c.autoinclude.plugin"]
target = "plone"

[tool.hatch.build.targets.wheel]
packages = ["src/Products"]

[tool.plone.project.settings]
plone_version = "6.1.1"
distribution = "plone.classicui"
db_storage = "direct"
created_at = "2026-02-27"

[tool.pytest.ini_options]
testpaths = ["src/Products/EasyNewsletter/tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["docs", "import_enl_stats.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "C90",  # mccabe complexity
    "B",    # bugbear
    "S",    # bandit (security)
    "UP",   # pyupgrade
    "SIM",  # simplify
    "PGH",  # pygrep-hooks
]
ignore = [
    "B005",   # strip with multi-char strings
    "C901",   # too complex
    "E501",   # line too long (legacy code)
    "E731",   # lambda assignment
    "PGH004", # specific noqa codes
    "S105",   # hardcoded password (test fixtures)
    "S306",   # mktemp usage (legacy code)
    "S602",   # subprocess shell=True (locale scripts)
    "SIM102", # nested if
    "SIM103", # return condition directly
    "SIM105", # contextlib.suppress
    "SIM108", # ternary operator
    "SIM115", # context manager for open
    "UP030",  # implicit format references
    "UP031",  # percent format (legacy code)
    "UP032",  # f-string instead of format
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/Products/EasyNewsletter/tests/_test_daily_issue.py" = ["I001", "F811", "E702"]

[tool.ruff.lint.isort]
known-first-party = ["Products"]

[tool.ruff.format]
preview = true

[tool.zest-releaser]
create-wheel = true
history_file = "CHANGELOG.md"

[tool.uv]
constraint-dependencies = [
    "AccessControl==7.2",
    "Acquisition==6.1",
    "alabaster==0.7.14; python_version == '3.9'",
    "alabaster==1.0.0; python_version > '3.9'",
    "argcomplete==3.6.3",
    "argh==0.31.3",
    "async-generator==1.10",
    "attrs==25.3.0",
    "AuthEncoding==6.0",
    "Babel==2.16.0",
    "backports.cached-property==1.0.2",
    "backports.tarfile==1.2.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "borg.localrole==4.0.2",
    "BTrees==6.1",
    "build==1.3.0",
    "cachecontrol==0.14.3",
    "cached-property==2.0.1",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "Chameleon==4.4.4",
    "charset-normalizer==3.4.1",
    "check-manifest==0.51",
    "click==8.2.2",
    "click-default-group==1.2.4",
    "cmarkgfm==2024.11.20",
    "collective.MockMailHost==3.0.0",
    "collective.monkeypatcher==2.0.1",
    "collective.recipe.omelette==2.0.0",
    "collective.recipe.template==2.2",
    "collective.recipe.vscode==0.1.9",
    "collective.xmltestreport==2.0.2",
    "collective.z3cform.datagridfield==3.0.4",
    "colorama==0.4.6",
    "colorama==0.4.6",
    "commonmark==0.9.1",
    "configparser==7.2.0",
    "coverage==7.8.2",
    "cryptography==45.0.7",
    "cssselect==1.3.0",
    "DateTime==5.5",
    "decorator==5.2.1",
    "Deprecated==1.3.1",
    "diazo==2.0.4",
    "distro==1.9.0",
    "DocumentTemplate==4.6",
    "docutils==0.20.1; python_version == '3.9'",
    "docutils==0.21.2; python_version > '3.9'",
    "exceptiongroup==1.3.0",
    "ExtensionClass==6.0",
    "fancycompleter==0.11.1",
    "feedparser==6.0.12",
    "filelock==3.20.2",
    "five.customerize==4.0",
    "five.intid==3.0.2",
    "five.localsitemanager==5.0",
    "furl==2.1.4",
    "furo==2024.8.6",
    "future==1.0.0",
    "gitdb==4.0.12",
    "GitPython==3.1.46",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httplib2==0.31.0",
    "i18ndude==6.3.0",
    "icalendar==6.3.2",
    "id==1.5.0",
    "idna==3.10",
    "imagesize==1.4.1",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.5.2",
    "incremental==24.11.0",
    "iniconfig==2.1.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "jeepney==0.9.0",
    "Jinja2==3.1.6",
    "jsonschema==4.24.1",
    "jsonschema-specifications==2025.9.1",
    "keyring==25.6.0",
    "legacy-cgi==2.6.2",
    "lockfile==0.12.2",
    "lxml==5.4.0",
    "lxml-html-clean==0.4.4",
    "manuel==1.13.0",
    "Markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "Missing==5.0",
    "mock==5.2.0",
    "more-itertools==10.8.0",
    "mr.developer==2.0.4",
    "msgpack==1.1.2",
    "MultiMapping==5.0",
    "multipart==1.2.2",
    "mxdev==5.1.0",
    "natsort==8.4.0",
    "nh3==0.2.22",
    "nt-svcutils==2.13.0",
    "oauthlib==3.3.1",
    "orderedmultidict==1.0.2",
    "outcome==1.3.0post0",
    "overrides==7.7.0",
    "packaging==25.0",
    "Paste==3.10.1",
    "PasteDeploy==3.1.0",
    "pdbpp==0.11.7",
    "pep440==0.1.2",
    "pep517==0.13.1",
    "Persistence==5.1",
    "persistent==6.1",
    "piexif==1.1.3",
    "Pillow==12.1.1",
    "pip==25.3",
    "Plone==6.1.4",
    "plone.alterego==2.0.2",
    "plone.api==2.5.3",
    "plone.app.blocks==7.0.1",
    "plone.app.caching==4.1.1",
    "plone.app.content==4.1.11",
    "plone.app.contentlisting==3.0.6",
    "plone.app.contentmenu==3.0.8",
    "plone.app.contentrules==5.0.8",
    "plone.app.contenttypes==4.0.9",
    "plone.app.customerize==2.0.3",
    "plone.app.debugtoolbar==1.4.0",
    "plone.app.dexterity==4.1.1",
    "plone.app.discussion==5.2.2",
    "plone.app.drafts==3.0.0",
    "plone.app.event==5.2.3",
    "plone.app.i18n==4.0.2",
    "plone.app.intid==2.0.1",
    "plone.app.iterate==6.3.2",
    "plone.app.jquerytools==1.9.5",
    "plone.app.layout==5.0.3",
    "plone.app.linkintegrity==4.0.6",
    "plone.app.locales==6.1.1",
    "plone.app.lockingbehavior==2.0.3",
    "plone.app.mosaic==3.3.2",
    "plone.app.multilingual==8.4.0",
    "plone.app.portlets==6.0.3",
    "plone.app.querystring==2.1.4",
    "plone.app.redirector==3.0.5",
    "plone.app.registry==2.0.7",
    "plone.app.relationfield==4.0.3",
    "plone.app.robotframework==2.1.5",
    "plone.app.standardtiles==3.2.2",
    "plone.app.testing==7.1.2",
    "plone.app.textfield==3.0.1",
    "plone.app.theming==6.0.0",
    "plone.app.tiles==4.0.2",
    "plone.app.upgrade==3.3.1",
    "plone.app.users==3.1.4",
    "plone.app.uuid==2.2.4",
    "plone.app.versioningbehavior==2.0.5",
    "plone.app.viewletmanager==4.0.5",
    "plone.app.vocabularies==6.0.4",
    "plone.app.widgets==5.0.2",
    "plone.app.workflow==5.0.4",
    "plone.app.z3cform==4.7.9",
    "plone.autoform==2.0.4",
    "plone.autoinclude==2.0.5",
    "plone.base==3.1.2",
    "plone.batching==2.0.7",
    "plone.behavior==2.0.3",
    "plone.browserlayer==3.0.2",
    "plone.cachepurging==3.0.3",
    "plone.caching==2.0.2",
    "plone.classicui==1.0.1",
    "plone.contentrules==3.0.2",
    "plone.dexterity==3.0.8",
    "plone.distribution==3.2.1",
    "plone.event==2.0.3",
    "plone.exportimport==1.3.1",
    "plone.folder==4.0.1",
    "plone.formwidget.autocomplete==1.5.0",
    "plone.formwidget.namedfile==3.1.2",
    "plone.formwidget.recurrence==3.0.6",
    "plone.i18n==5.1.1",
    "plone.indexer==2.0.2",
    "plone.intelligenttext==4.0.2",
    "plone.jsonserializer==0.9.11",
    "plone.keyring==4.0.3",
    "plone.locking==3.0.2",
    "plone.memoize==3.0.4",
    "plone.namedfile==7.3.0",
    "plone.outputfilters==5.0.5",
    "plone.portlet.collection==4.0.5",
    "plone.portlet.static==4.0.5",
    "plone.portlets==3.0.3",
    "plone.protect==5.0.5",
    "plone.recipe.command==1.1",
    "plone.recipe.zeoserver==3.0.5",
    "plone.recipe.zope2instance==8.0.1",
    "plone.registry==2.0.2",
    "plone.releaser==2.5.2",
    "plone.reload==4.0.0",
    "plone.resource==3.0.3",
    "plone.resourceeditor==4.0.2",
    "plone.rest==5.1.0",
    "plone.restapi==9.15.4",
    "plone.rfc822==3.0.2",
    "plone.scale==4.3.0",
    "plone.schema==2.0.3",
    "plone.schemaeditor==4.0.13",
    "plone.session==4.0.6",
    "plone.staticresources==2.3.5",
    "plone.stringinterp==2.0.3",
    "plone.subrequest==2.0.6",
    "plone.supermodel==2.0.5",
    "plone.testing==9.0.7",
    "plone.theme==4.0.4",
    "plone.tiles==3.0.3",
    "plone.transformchain==3.0.2",
    "plone.uuid==2.0.2",
    "plone.versioncheck==1.8.2",
    "plone.volto==5.2.3",
    "plone.z3cform==2.0.5",
    "plonetheme.barceloneta==3.3.3",
    "pluggy==1.6.0",
    "Products.BTreeFolder2==5.1",
    "Products.CMFCore==3.7",
    "Products.CMFDiffTool==4.0.5",
    "Products.CMFDynamicViewFTI==7.0.3",
    "Products.CMFEditions==4.0.6",
    "Products.CMFPlacefulWorkflow==3.0.6",
    "Products.CMFPlone==6.1.4",
    "Products.CMFUid==4.2",
    "Products.DateRecurringIndex==3.0.1",
    "Products.DCWorkflow==3.0",
    "Products.ExtendedPathIndex==5.0.0",
    "Products.ExternalMethod==6.0",
    "Products.GenericSetup==5.0.0",
    "Products.isurlinportal==3.0.1",
    "Products.MailHost==6.0",
    "Products.MimetypesRegistry==3.0.1",
    "Products.PDBDebugMode==2.1",
    "Products.PlonePAS==8.0.5",
    "Products.PluggableAuthService==3.0",
    "Products.PluginRegistry==2.0",
    "Products.PortalTransforms==4.1.1",
    "Products.PrintingMailHost==1.1.8",
    "Products.PythonScripts==5.1",
    "Products.Sessions==6.0",
    "Products.SiteErrorLog==6.0",
    "Products.StandardCacheManagers==5.0",
    "Products.statusmessages==5.0.7",
    "Products.validation==3.0.0",
    "Products.ZCatalog==7.1",
    "Products.ZopeVersionControl==4.1",
    "progress==1.6.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.5",
    "psutil==7.1.3",
    "py==1.11.0",
    "pycparser==2.22",
    "PyGithub==2.8.1",
    "Pygments==2.19.1",
    "PyJWT==2.12.0",
    "PyNaCl==1.6.2",
    "pyOpenSSL==25.3.0",
    "pyparsing==3.3.1",
    "pyproject-hooks==1.2.0",
    "pyrepl==0.11.4",
    "pyroma==5.0.1",
    "pyrsistent==0.20.0",
    "PySocks==1.7.1",
    "pytest==8.4.2",
    "pytest-cov==6.3.0",
    "pytest-plone==1.0.0a2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-gettext==5.0",
    "python-magic==0.4.27",
    "pytz==2024.2",
    "pywin32-ctypes==0.2.3; platform_system == \"Windows\"",
    "PyYAML==6.0.3",
    "readme-renderer==44.0",
    "Record==4.1",
    "referencing==0.36.2",
    "repoze.xmliter==1.0",
    "requests==2.33.0",
    "requests-toolbelt==1.0.0",
    "responses==0.25.8",
    "RestrictedPython==8.0",
    "rfc3986==2.0.0",
    "rich==14.0.0",
    "robotframework==7.3.2",
    "robotframework-assertion-engine==4.0.0",
    "robotframework-browser==19.12.7",
    "robotframework-debuglibrary==2.5.0",
    "robotframework-lsp==1.13.0",
    "robotframework-pythonlibcore==4.4.1",
    "robotframework-selenium2library==3.0.0",
    "robotframework-selenium2screenshots==0.8.1",
    "robotframework-seleniumlibrary==6.7.1",
    "robotframework-seleniumtestability==2.1.0",
    "robotsuite==3.0.1",
    "roman==5.0",
    "rpds-py==0.22.3",
    "SecretStorage==3.3.3",
    "seedir==0.5.1",
    "selenium==4.9.1",
    "setuptools==80.9.0",
    "sgmllib3k==1.0.0",
    "simplejson==3.20.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snowballstemmer==2.2.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "Sphinx==7.4.7; python_version == '3.9'",
    "Sphinx==8.1.3; python_version > '3.9'",
    "sphinx-basic-ng==1.0.0b2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "stdlib-list==0.12.0",
    "tempstorage==6.0",
    "toml==0.10.2",
    "tomli==2.2.1",
    "towncrier==24.8.0",
    "transaction==5.0",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "trove-classifiers==2025.9.11.17",
    "twine==6.1.0",
    "types-PyYAML==6.0.12.10",
    "types-toml==0.10.8.5",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "Unidecode==1.4.0",
    "urllib3==2.6.3",
    "urllib3-secure-extra==0.1.0",
    "wadllib==2.0.0",
    "waitress==3.0.2",
    "watchdog==6.0.0",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "WebOb==1.8.9",
    "webresource==1.2",
    "WebTest==3.0.3",
    "wheel==0.45.1",
    "wmctrl==0.5",
    "wrapt==2.1.2",
    "WSGIProxy2==0.5.1",
    "wsproto==1.2.0",
    "z3c.caching==4.0",
    "z3c.checkversions==3.0",
    "z3c.dependencychecker==2.15",
    "z3c.form==6.0.1",
    "z3c.formwidget.query==3.0",
    "z3c.jbot==3.1",
    "z3c.objpath==3.0",
    "z3c.pt==5.1",
    "z3c.relationfield==3.0",
    "z3c.unconfigure==3.0",
    "z3c.zcmlhook==3.0",
    "zc.buildout==4.1.12",
    "zc.lockfile==3.0.post1",
    "zc.recipe.egg==3.0.0",
    "zc.recipe.testrunner==3.2",
    "zc.relation==2.1",
    "ZConfig==4.2",
    "zdaemon==5.2.1",
    "ZEO==6.0.0",
    "zest.pocompile==2.0.0",
    "zest.releaser==9.6.2",
    "zestreleaser.towncrier==1.3.0",
    "zExceptions==5.0",
    "zipp==3.21.0",
    "ZODB==6.0.1",
    "ZODB3==3.11.0",
    "zodbpickle==4.1.1",
    "zodbupdate==2.0",
    "zodbverify==1.2.1",
    "Zope==5.13",
    "zope.annotation==5.0",
    "zope.app.locales==5.0",
    "zope.browser==3.0",
    "zope.browsermenu==5.0",
    "zope.browserpage==5.0",
    "zope.browserresource==5.1",
    "zope.cachedescriptors==5.0",
    "zope.component==6.0",
    "zope.componentvocabulary==3.0",
    "zope.configuration==6.0",
    "zope.container==6.1",
    "zope.contentprovider==6.0",
    "zope.contenttype==5.1",
    "zope.copy==5.0",
    "zope.datetime==5.0.0",
    "zope.deferredimport==5.0",
    "zope.deprecation==5.1",
    "zope.dottedname==6.0",
    "zope.event==5.0",
    "zope.exceptions==5.2",
    "zope.filerepresentation==6.0",
    "zope.globalrequest==2.0",
    "zope.hookable==7.0",
    "zope.i18n==5.2",
    "zope.i18nmessageid==7.0",
    "zope.interface==7.2",
    "zope.intid==5.1",
    "zope.keyreference==6.1",
    "zope.lifecycleevent==5.0",
    "zope.location==5.0",
    "zope.mkzeoinstance==6.0",
    "zope.pagetemplate==5.1",
    "zope.processlifetime==3.0",
    "zope.proxy==6.1",
    "zope.ptresource==5.0",
    "zope.publisher==7.3",
    "zope.pytestlayer==8.3",
    "zope.ramcache==3.1",
    "zope.schema==7.0.1",
    "zope.security==7.3",
    "zope.sendmail==6.2",
    "zope.sequencesort==5.0",
    "zope.site==5.0",
    "zope.size==5.0",
    "zope.structuredtext==5.0",
    "zope.tal==5.0.1",
    "zope.tales==6.0",
    "zope.testbrowser==7.0",
    "zope.testing==5.0.1",
    "zope.testrunner==7.2",
    "zope.traversing==5.0",
    "zope.viewlet==5.0",
    "Zope2==4.0",
    "ZopeUndo==6.0",
]

[tool.uv.sources]
products-easynewsletter = { workspace = true }

[dependency-groups]
dev = [
    "products-easynewsletter",
]
